--- a/blog/blog/templates/base.html
+++ b/blog/blog/templates/base.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %} Сайт {% endblock %}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
+
 <body>
+
+    <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+      <p class="h5 my-0 me-md-auto fw-normal">Блог</p>
+      <nav class="my-2 my-md-0 me-md-3">
+        <a class="p-2 text-dark" href="{% url 'main:index' %}">Главная</a>
+        <a class="p-2 text-dark" href="{% url 'stories:index' %}">Список рассказов</a>
+        <a class="p-2 text-dark" href="#">Книга</a>
+        <a class="p-2 text-dark" href="{% url 'sendemail:contact' %}">Связаться с автором</a>
+      </nav>
+    </header>
 
     {% block content %}{% endblock %}
 
