--- a/blog/blog/templates/stories/story_detail.html
+++ b/blog/blog/templates/stories/story_detail.html
@@ -8,10 +8,13 @@
     <p>{{story.story_text}}</p>
     <em>Просмотров: {{views.count}}</em>
 
+    {% with comments.count as total_comments %}
+        <h2>Всего комментариев: {{ total_comments }}</h2>
+    {% endwith %}
+
     <hr>
         {% if comments %}
-
-            {% for comment in comments %}
+            {% for comment in comments_on_page %}
                 <p>
                     <strong>{{comment.authors_name}}</strong>
                     <p>{{comment.comment_text}}</p>
@@ -33,5 +36,7 @@
         <button type="submit">Оставить комментарий</button>
 
     </form>
+
+    {% include "pagination.html" with page=comments_on_page %}
 
 {% endblock %}
