--- a/blog/blog/templates/base.html
+++ b/blog/blog/templates/base.html
@@ -13,7 +13,7 @@
 <body>
 
     <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-      <p class="h5 my-0 me-md-auto fw-normal">Блог</p>
+<!--      <p class="h5 my-0 me-md-auto fw-normal">Блог</p>-->
       <nav class="my-2 my-md-0 me-md-3">
         <a class="p-2 text-dark" href="{% url 'main:index' %}">Главная</a>
         <a class="p-2 text-dark" href="{% url 'stories:index' %}">Список рассказов</a>
@@ -21,6 +21,16 @@
         <a class="p-2 text-dark" href="{% url 'sendemail:contact' %}">Связаться с автором</a>
       </nav>
     </header>
+
+    {% if messages %}
+        <ul class="messages">
+        {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                {{ message }}
+            </li>
+        {% endfor %}
+        </ul>
+    {% endif %}
 
     {% block content %}{% endblock %}
 
