--- a/blog/blog/templates/stories/stories_list.html
+++ b/blog/blog/templates/stories/stories_list.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+
+{% block main_page %} Вернуться на главную страницу {% endblock %}
+
 {% block title %} Рассказы {% endblock %}
 
 {% block content %}
@@ -15,7 +18,7 @@
                     <p class="card-text">Название конкурса: "{{ story.story_competition }}".</p>
                     <p class="card-text">Описание конкурса: "{{ story.story_competition_description }}."</p>
                     <p class="card-text">Призовое место: {{ story.story_award_winning_place }}.</p>
-                    <a href="{% url 'stories:detail' story.id %}" class="btn btn-primary">Перейти к рассказу</a>
+                    <a href="{% url 'stories:detail' story.id %}" class="btn btn-dark">Перейти к рассказу</a>
                 </div>
             </div>
         {% endfor %}
