--- a/blog/blog/templates/book/about_book.html
+++ b/blog/blog/templates/book/about_book.html
@@ -9,21 +9,22 @@
 
     <div class="card mb-3">
         <div class="card-header">
-            <h5 class="card-title">{{ book.book_title }}. Содержание:</h5>
+            <h5 class="card-title">{{ book.book_title }}. О книге:</h5>
         </div>
+
         <div class="card-body">
-            {% if chapters %}
-                {% for chapter in chapters %}
-                    <p class="card-text">{{ chapter.id }}. {{ chapter.chapter_title }}</p>
-                    <a href="{% url 'book:chapter_detail' chapter.id %}" class="btn btn-light">Перейти к главе</a>
-                    <hr>
-                {% endfor %}
+            {% if book %}
+                <p class="card-text">{{ book.book_description }}</p>
+                <div style="padding-bottom: 10px">
+                    <a href="{% url 'book:book_content' %}" class="btn btn-light">Перейти к содержанию книги</a>
+                </div>
+                <div>
+                    <a href="{% url 'book:chapter_detail' 1 %}" class="btn btn-light">Приступить к чтению</a>
+                </div>
             {% else %}
-                Главы не найдены.
+                Описание книги не удалось загрузить.
             {% endif %}
         </div>
     </div>
-
-    <p>{{ book.book_description }}</p>
 
 {% endblock %}
