--- a/blog/blog/templates/base.html
+++ b/blog/blog/templates/base.html
@@ -12,61 +12,63 @@
 </head>
 
 <body>
-    <container id="main-navbar">
-        <section class="sticky-top">
-            <header class="d-flex flex-column flex-md-row align-items-center p-3 mb-3 bg-white border shadow-sm" id="header-nav">
-              <nav class="my-2 my-md-0 me-md-3" id="nav-left">
-                <a class="p-2 text-dark" href="{% url 'main:index' %}" id="main-page">
-                    {% block main_page %} Главная страница {% endblock %}
-                </a>
-                <a class="p-2 text-dark" href="{% url 'stories:index' %}" id="stories-list">
-                    {% block stories_list %} Список рассказов {% endblock %}
-                </a>
+    <div id="base-page" style="margin: 0px 200px">
+        <container id="main-navbar">
+            <section class="sticky-top">
+                <header class="d-flex flex-column flex-md-row align-items-center p-3 mb-3 bg-white border shadow-sm" id="header-nav">
+                    <nav class="my-2 my-md-0 me-md-3" id="nav-left">
+                        <a class="p-2 text-dark" href="{% url 'main:index' %}" id="main-page">
+                            {% block main_page %} Главная страница {% endblock %}
+                        </a>
+                        <a class="p-2 text-dark" href="{% url 'stories:index' %}" id="stories-list">
+                            {% block stories_list %} Список рассказов {% endblock %}
+                        </a>
 
-                <div class="btn-group">
-                  <button type="button" class="btn btn-light bg-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="book">
-                    Сага о Каррадии
-                  </button>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{% url 'book:about_book' %}" id="about-book">О книге</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'book:book_content' %}" id="book-content">Содержание книги</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'book:chapter_detail' 1 %}" id="chapter1">Приступить к чтению</a>
-                  </div>
-                </div>
-              </nav>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-light bg-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="book">
+                                Сага о Каррадии
+                            </button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="{% url 'book:about_book' %}" id="about-book">О книге</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="{% url 'book:book_content' %}" id="book-content">Содержание книги</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="{% url 'book:chapter_detail' 1 %}" id="chapter1">Приступить к чтению</a>
+                            </div>
+                        </div>
+                    </nav>
 
-              <nav class="ml-auto my-2 my-md-0 me-md-3" id="nav-right">
-                <a class="p-2 text-dark" href="{% url 'sendemail:contact' %}" id="contact">Связаться с автором</a>
-                <a class="p-2 text-dark" href="https://github.com/Interligo" target="_blank" id="github">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                    </svg>
-                </a>
-              </nav>
-            </header>
-        </section>
-    </container>
+                    <nav class="ml-auto my-2 my-md-0 me-md-3" id="nav-right">
+                        <a class="p-2 text-dark" href="{% url 'sendemail:contact' %}" id="contact">Связаться с автором</a>
+                        <a class="p-2 text-dark" href="https://github.com/Interligo" target="_blank" id="github">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                              <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                            </svg>
+                        </a>
+                    </nav>
+                </header>
+            </section>
+        </container>
 
-    {% if messages %}
-        <ul class="messages-to-author">
-        <style> .messages-to-author {list-style-type: none; padding: 0; margin: 0;} </style>
-        {% for message in messages %}
-            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
-                <div class="alert alert-success" role="alert">
-                    {{ message|safe }}
-                </div>
-            </li>
-        {% endfor %}
-        </ul>
-    {% endif %}
+        {% if messages %}
+            <ul class="messages-to-author">
+            <style> .messages-to-author {list-style-type: none; padding: 0; margin: 0;} </style>
+            {% for message in messages %}
+                <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                    <div class="alert alert-success" role="alert">
+                        {{ message|safe }}
+                    </div>
+                </li>
+            {% endfor %}
+            </ul>
+        {% endif %}
 
-    {% block content %}{% endblock %}
+        {% block content %}{% endblock %}
 
-    <footer class="footer bg-white text-dark" style="padding-top: 40px; padding-bottom: 20px">
-        <span class="text-muted">© Interligo, 2021</span>
-    </footer>
+        <footer class="footer bg-white text-dark" style="padding-top: 40px; padding-bottom: 20px">
+            <span class="text-muted">© Interligo, 2021</span>
+        </footer>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
