--- a/blog/blog/templates/sendemail/email.html
+++ b/blog/blog/templates/sendemail/email.html
@@ -4,35 +4,27 @@
 {% block title %} Связаться с автором {% endblock %}
 
 {% block content %}
-  <h1 class="text-center">Связаться с автором</h1>
+    <h1 class="text-center">Связаться с автором</h1>
 
-  <div class="container">
-    <div class="text-center" id="collapse_container">
-      <input type="button" class="btn btn-dark" data-toggle="collapse" data-target="#toggleSample" value="Дисклеймер об этой странице">
-      <div id="toggleSample" class="collapse in">
-        <p style="background: #F9F9F9; border: 2px solid #E1E1E8; margin-top: 20px; padding: 20px;">
-          Любой посетитель сайта может связаться со мной через эту форму.
-          Для этого не требуется регистрироваться или вводить данные электронной почты.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div id="contact_container">
-      <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <div class="form-actions">
-          <button type="submit" class="btn btn-dark" id="btn-send">Отправить</button>
+    <div class="container" id="collapse_container">
+        <div class="text-center">
+            <input type="button" class="btn btn-dark" data-toggle="collapse" data-target="#toggleSample" value="Дисклеймер об этой странице">
+            <div id="toggleSample" class="collapse in">
+                <p style="background: #F9F9F9; border: 2px solid #E1E1E8; margin-top: 20px; padding: 20px;">
+                    Любой посетитель сайта может связаться со мной через эту форму.
+                    Для этого не требуется регистрироваться или вводить данные электронной почты.
+                </p>
+            </div>
         </div>
-      </form>
     </div>
-  </div>
 
-<!--  <button class="btn btn-primary" type="button" disabled>-->
-<!--    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>-->
-<!--    Loading...-->
-<!--  </button>-->
-
+    <div class="container" id="contact_container">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="form-actions">
+                <button type="submit" class="btn btn-dark" id="btn-send">Отправить</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
