--- a/blog/blog/templates/main/main_page.html
+++ b/blog/blog/templates/main/main_page.html
@@ -106,9 +106,9 @@
                                     <li>Django Framework</li>
                                     <li>Bash</li>
                                     <li>Git</li>
-                                    <li>SQL (PostgreSQL)</li>
-                                    <li>SQLAlchemy</li>
-                                    <li>Pytest, unittest</li>
+                                    <li>SQL (PostgreSQL|MySQL)</li>
+                                    <li>ORM (SQLAlchemy)</li>
+                                    <li>Tests (pytest|unittest)</li>
                                 </ol>
                             </div>
                         </div>
