--- a/blog/blog/templates/stories/story_detail.html
+++ b/blog/blog/templates/stories/story_detail.html
@@ -10,27 +10,40 @@
 {% block content %}
 
     <blockquote class="blockquote">
-      <h2> {{ story.story_title }} </h2>
-      {% with comments.count as total_comments %}
+        <h2> {{ story.story_title }} </h2>
+        {% with comments.count as total_comments %}
         <footer class="blockquote-footer"> Просмотров: {{ views.count }}. Всего комментариев: {{ total_comments }}.</footer>
-      {% endwith %}
+        {% endwith %}
     </blockquote>
 
-    <p>{{story.story_text}}</p>
+    <div style="text-align: justify;">
+        {% if story.pretty_story_print %}
+
+            {% for item in story.pretty_story_print %}
+                <p>{{ item }}</p>
+            {% endfor %}
+
+        {% else %}
+            Текст главы не удалось загрузить.
+        {% endif %}
+    </div>
 
     <hr>
-
     <h2> Комментарии: </h2>
     <br>
+
         {% if comments %}
+
             {% for comment in comments_on_page %}
                     <div class="card w-50 my-2">
                         <div class="card-header">
                             <h5 class="card-title">{{ comment.authors_name }}</h5>
                         </div>
+
                         <div class="card-body">
                             <p class="card-text">{{ comment.comment_text }}</p>
                         </div>
+
                         <div class="card-footer text-muted">
                             {{ comment.publication_date }}
                         </div>
@@ -43,7 +56,7 @@
 
     <hr>
 
-    <div class="container" style="margin: 0px; padding: 0px;" id="leave-comment_container">
+    <div class="container" style="margin: 0px; padding: 0px;" id="leave-comment-container">
         <form method="POST" action="{% url 'stories:leave_comment' story.id %}">
             {% csrf_token %}
             {{ form.as_p }}
