Update main page template: add new information

--- a/blog/blog/templates/main/main_page.html
+++ b/blog/blog/templates/main/main_page.html
@@ -42,7 +42,7 @@
                         <p class="card-text" id="about-api">
                             Кстати, сайт поддерживает API Django REST Framework:
                             <br>
-                            <a target="_blank" href="{% url 'stories:stories_list' %}">API со списком рассказов</a>
+                            <a target="_blank" href="{% url 'api:stories_list' %}">API со списком рассказов</a>
                         </p>
                     </div>
                 </div>
@@ -135,8 +135,8 @@
                                     <li>Bash</li>
                                     <li>Git</li>
                                     <li>SQL (PostgreSQL | MySQL)</li>
-                                    <li>ORM (SQLAlchemy)</li>
-                                    <li>Tests (pytest | unittest)</li>
+                                    <li>ORM (SQLAlchemy | Django ORM)</li>
+                                    <li>Tests (pytest | unittest | Django tests)</li>
                                 </ol>
                             </div>
                         </div>
