--- a/blog/blog/templates/base.html
+++ b/blog/blog/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% block icon %}{% endblock %}
     <title>{% block title %} Сайт {% endblock %}</title>
     <style> body {padding-top: 30px; padding-left: 30px; padding-right: 30px;} </style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
