Update template: add favicon

--- a/blog/blog/templates/book/book_content.html
+++ b/blog/blog/templates/book/book_content.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 
+{% block icon %} <link rel="shortcut icon" type="image/png" href="/media/icons/book_page/favicon.png"/> {% endblock %}
+
 {% block main_page %} Вернуться на главную страницу {% endblock %}
 
 {% block title %} {{ book.book_title }}: содержание {% endblock %}
