--- a/blog/blog/templates/main/main_page.html
+++ b/blog/blog/templates/main/main_page.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 
+{% block icon %} <link rel="shortcut icon" type="image/png" href="/media/icons/main_page/favicon.png"/> {% endblock %}
+
 {% block title %} Главная страница {% endblock %}
 
 {% block content %}
@@ -145,7 +147,7 @@
             </div>
 
             <div class="col w-50" id="my-photo">
-                <img src="media/photo.jpg" width="715" height="1100" class="photo-detail"/>
+                <img src="/media/photo.jpg" width="715" height="1100" class="photo-detail"/>
             </div>
         </div>
     </div>
