--- a/blog/blog/templates/sendemail/email.html
+++ b/blog/blog/templates/sendemail/email.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 
+{% block icon %} <link rel="shortcut icon" type="image/png" href="/media/icons/contact_page/favicon.png"/> {% endblock %}
+
 {% block title %} Связаться с автором {% endblock %}
 
 {% block content %}
