--- a/blog/blog/templates/stories/story_detail.html
+++ b/blog/blog/templates/stories/story_detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 
+{% block icon %} <link rel="shortcut icon" type="image/png" href="/media/icons/stories_page/favicon.png"/> {% endblock %}
+
 {% block main_page %} Вернуться на главную страницу {% endblock %}
 
 {% block stories_list %} Вернуться к списку рассказов {% endblock %}
